# rust-backend-web-frontend

./: Cargo.toml  DEVELOPMENT.md  README.md  USING_AS_A_TEMPLATE.md  justfile
.github/workflows/: build-artifacts.yml  pr.yml
client/: index.html  justfile  package-lock.json  package.json  vite.config.ts  vitest-setup.js  vitest.config.ts
client/__test__/: App.test.tsx
client/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
client/src/routes/: __root.tsx  data.$key.edit.tsx  data.$key.tsx  data.key.$key.edit.tsx  data.key.$key.tsx  data.tsx  data_.new.tsx  data_.new_secret.tsx  index.tsx  values.$key.edit.tsx  values.$key.tsx  values.tsx
e2e/: justfile  package-lock.json  package.json  playwright.config.ts
e2e/src/: index.ts
e2e/tests/: data.spec.ts  root.spec.ts
server/: Cargo.toml  justfile
server/src/: main.rs
types/: .gitignore  Cargo.toml  justfile  package-lock.json  package.json  tsconfig.json
types/bindings/: .gitignore
types/src/: lib.rs
