[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tower-serve-static = "0.1.1"
include_dir = "0.7.0"
webbrowser = "1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.32", features = ["derive"] }
ts-rs = "10.1"

[features]
development_mode = []
