[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.0", features = ["macros"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = [
    "fs",
    "trace",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-serve-static = "0.1.1"
include_dir = "0.7.0"
webbrowser = "1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.32", features = ["derive"] }
ts-rs = "10.1"
types = { path = "../types" }

[features]
development_mode = []
